	PR c++/58611 	* decl.c (check_initializer): Don't finish_compound_literal 	on erroneous constexpr init.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@212506 138bc75d-0d04-0410-961f-82ee72b054a4